--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,17 @@ body{
 	background: #fff;
 	font-family: 'Acme', sans-serif;
 }
+
+p{
+	margin-top: 0;
+	margin-bottom: 0;
+}
 .container{
 	max-width: 100%;
 	min-height: 100vh;
 	background: linear-gradient(135deg,#d8b4e7, transparent);
 	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
 .app_inner{
@@ -21,7 +27,7 @@ body{
 	background: linear-gradient(135deg, #41387c, rgb(242, 197, 233));
 	color: #fff;
 	margin: auto ;
-	border-radius: 20px;
+	border-radius: 8px;
 	padding: 40px 35px;
 	text-align: center;
 	padding-top: 50px;
@@ -40,7 +46,7 @@ body{
 	background: #ebfffc;
 	color: #555;
 	padding: 10px 20px;
-	border-radius: 30px;
+	border-radius: 8px;
 	flex: 1;
 	margin-right: 16px;
 	font-size: 18px;
@@ -50,7 +56,7 @@ body{
 	border: 0;
 	outline: 0;
 	background: #ebfffc;
-	border-radius: 30px;
+	border-radius: 8px;
 	padding: 10px 10px;
 	cursor: pointer;
 }
@@ -94,4 +100,10 @@ body{
 
 .humidity, .wind{
 	font-size: 28px;
+}
+
+.wind__content{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
