--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,3 +107,19 @@ p{
 	flex-direction: column;
 	align-items: center;
 }
+
+@media screen and (max-width:764px) {
+	
+	.search{
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-between;
+		gap: 20px;
+	}
+
+	.details{
+		flex-direction: column;
+		gap: 20px;
+	}
+
+}
