--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ p{
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	gap: 10px;
 }
 
 .search input{
@@ -48,7 +49,6 @@ p{
 	padding: 10px 20px;
 	border-radius: 8px;
 	flex: 1;
-	margin-right: 16px;
 	font-size: 18px;
 }
 
